feat(home): add all work & move use mouse follow

--- a/src/utils/_variables.scss
+++ b/src/utils/_variables.scss
@@ -34,7 +34,8 @@ $shades-gray: #797979;
 
 $heading-size: 3.75rem;
 $heading-letter-spacing: 5px;
+$subheading-size: 2rem;
+$subheading-letter-spacing: 5px;
 
-$subheading-size: 1.5rem;
 $paragraph-one-size: 1rem;
 $paragraph-two-size: 0.75rem;
