--- a/src/components/work/work.scss
+++ b/src/components/work/work.scss
@@ -3,6 +3,7 @@
 .work {
   min-height: 1750px;
   margin-top: 250px;
+  padding-bottom: 200px;
 
   &-title {
     display: flex;
@@ -230,6 +231,150 @@
       }
     }
   }
+
+  &-all {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+
+    h2 {
+      margin: 100px 0;
+    }
+
+    &--movies {
+      max-height: 800px;
+      flex-wrap: wrap;
+    }
+
+    &--theatre {
+      max-height: 300px;
+      flex-wrap: wrap;
+    }
+
+    &--movies,
+    &--theatre {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+      width: 90%;
+
+      &-row {
+        position: relative;
+        width: 48%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        height: 100px;
+        font-size: 1.25rem;
+        border-top: 1px solid $secondary-color;
+        border-radius: 2px;
+
+        &--name {
+          width: 40%;
+          font-weight: lighter;
+        }
+
+        &--year {
+          width: 20%;
+          font-weight: bolder;
+        }
+
+        &--more {
+          position: relative;
+          cursor: pointer;
+          width: 50px;
+          height: 50px;
+          border-radius: 50%;
+          background-color: $highlight-color;
+          display: flex;
+          align-content: center;
+          justify-content: center;
+
+          &-lines {
+            > div {
+              position: absolute;
+              top: 25%;
+              left: 50%;
+              width: 2px;
+              height: 50%;
+              background-color: $secondary-color;
+              border-radius: 2px;
+
+              &:first-child {
+                transform: rotate(90deg);
+                transition: all ease-in-out 0.5s;
+              }
+
+              &:last-child {
+                transform: rotate(0deg);
+                transition: all ease-in-out 0.5s;
+              }
+            }
+          }
+
+          &:hover {
+            .work-all--movies-row--more-lines,
+            .work-all--theatre-row--more-lines {
+              > div {
+                &:first-child {
+                  transform: rotate(-90deg);
+                  transition: all ease-in-out 0.5s;
+                }
+
+                &:last-child {
+                  transform: rotate(90deg);
+                  transition: all ease-in-out 0.5s;
+                }
+              }
+            }
+
+            .work-all--movies-row--more-expand,
+            .work-all--theatre-row--more-expand {
+              transform: scale(1);
+              transition: all ease-in-out 0.1s;
+            }
+          }
+
+          &-expand {
+            position: absolute;
+            top: -100%;
+            right: 100%;
+            width: 300px;
+            height: 125px;
+            border: 1px solid $secondary-color;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: center;
+            gap: 20px;
+            background-color: $primary-color;
+            padding: 10px 20px;
+            transform: scale(0);
+            z-index: 5;
+
+            &--part {
+              display: flex;
+              justify-content: space-between;
+              gap: 10px;
+            }
+
+            b {
+              font-size: 0.75rem;
+            }
+
+            p {
+              margin: 0;
+              font-size: 0.75rem;
+              font-weight: lighter;
+              letter-spacing: 0;
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
 .show-top-card {
@@ -372,7 +517,7 @@
 
 @keyframes show-top {
   0% {
-    transform: translateY(-150px);
+    transform: translateY(-200px);
     opacity: 0;
   }
 
@@ -451,7 +596,7 @@
   }
 
   100% {
-    transform: translateY(-150px);
+    transform: translateY(-200px);
     opacity: 1;
   }
 }
